feat(be/community) : entity 코틀린 전환으로 수정, 테스트 코드 오류 수정